# stock-project

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 2024-06-18_init_stock_table.py
infra/: Dockerfile.prod
infra/entrypoints/: gunicorn.sh
src/: cache.py  config.py  database.py  dependencies.py  main.py
src/apps/stock/: constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py
src/providers/: market_watch.py  polygon.py
src/tests/: test_stock.py
